# GameStash-Free-Game-Tracker

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_NOW.md  DEVELOPER_REFERENCE.md  GITHUB_DEPLOYMENT.md  PRODUCTION_READY.md  PRODUCTION_UPGRADE.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  RELEASE_GUIDE.md  SECURITY.md  SUPABASE_SYNC_FIX.md  build.bat  build_debug.bat  build_output.txt  build_release.bat  debug.cpp  index.html  init_git.bat  main.cpp  main_cli.cpp  run.bat  save_versions.bat  setup.iss  single_item.json  style.css  supabase_setup.sql
